--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,12 @@ jobs:
       with:
         gradle-version: 8.14.2
 
+    - name: Generate Gradle Wrapper
+      run: gradle wrapper --gradle-version 8.14.2
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Cache Gradle packages
       uses: actions/cache@v4
       with:
@@ -34,9 +40,6 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
 
     - name: Download dependencies
       run: ./gradlew dependencies
